--- a/starter-code/views/index.hbs
+++ b/starter-code/views/index.hbs
@@ -1,5 +1,5 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
-<a href="/signup">Sign up</a>
-<a href="/login">Login</a>
-<a href="/logout">Logout</a>
+{{!-- <h1>{{title}}</h1>
+<p>Welcome to {{title}}</p> --}}
+<p><a href="/signup">Sign up</a></p>
+<p><a href="/login">Login</a></p>
+<p> <a href="/logout">Logout</a></p>
